[package]
name = "gennewpass"
version = "0.2.0"
authors = ["VMM <vladimirov.m.m@ya.ru>"]
edition = "2018"


[[bin]]
name = "gennewpass"
path = "src/main.rs"

[lib]
crate-type = ["rlib"]
bench = false

[dependencies]
rand = "0.8.5"
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "string"] }